<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondaryVariant"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/importantText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tvTitle"
        android:textColor="@color/onPrimary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etGuess"
        style="@style/importantText"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/etHint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnCalculate"
        style="@style/primaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCalculate"
        android:textColor="@color/onPrimary"
        app:layout_constraintStart_toStartOf="@+id/etGuess"
        app:layout_constraintTop_toBottomOf="@+id/etGuess" />

    <Button
        android:id="@+id/btnClear"
        style="@style/primaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/btnClear"
        android:textColor="@color/onPrimary"
        app:layout_constraintEnd_toEndOf="@+id/etGuess"
        app:layout_constraintTop_toBottomOf="@+id/etGuess" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="348dp"
        android:layout_height="104dp"
        android:layout_marginTop="104dp"
        android:lines="4"
        style="@style/importantText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btnClear"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/btnCalculate"
        app:layout_constraintTop_toBottomOf="@+id/etGuess" />

    <Button
        android:id="@+id/btnRank"
        style="@style/secondaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRank"
        android:textColor="@color/onSecondary"
        app:layout_constraintEnd_toEndOf="@+id/tvResult"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvResult"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <Button
        android:id="@+id/btnTotals"
        style="@style/secondaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnTotals"
        android:textColor="@color/onSecondary"
        app:layout_constraintEnd_toEndOf="@+id/tvResult"
        app:layout_constraintHorizontal_bias="0.991"
        app:layout_constraintStart_toStartOf="@+id/tvResult"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />
</androidx.constraintlayout.widget.ConstraintLayout>